; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_netpoll.c_service_arp_queue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_netpoll.c_service_arp_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netpoll_info = type { i32 }
%struct.sk_buff = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.netpoll_info*)* @service_arp_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @service_arp_queue(%struct.netpoll_info* %0) #0 {
  %2 = alloca %struct.netpoll_info*, align 8
  %3 = alloca %struct.sk_buff*, align 8
  store %struct.netpoll_info* %0, %struct.netpoll_info** %2, align 8
  %4 = load %struct.netpoll_info*, %struct.netpoll_info** %2, align 8
  %5 = icmp ne %struct.netpoll_info* %4, null
  br i1 %5, label %6, label %17

6:                                                ; preds = %1
  br label %7

7:                                                ; preds = %12, %6
  %8 = load %struct.netpoll_info*, %struct.netpoll_info** %2, align 8
  %9 = getelementptr inbounds %struct.netpoll_info, %struct.netpoll_info* %8, i32 0, i32 0
  %10 = call %struct.sk_buff* @skb_dequeue(i32* %9)
  store %struct.sk_buff* %10, %struct.sk_buff** %3, align 8
  %11 = icmp ne %struct.sk_buff* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %7
  %13 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %14 = load %struct.netpoll_info*, %struct.netpoll_info** %2, align 8
  %15 = call i32 @netpoll_arp_reply(%struct.sk_buff* %13, %struct.netpoll_info* %14)
  br label %7

16:                                               ; preds = %7
  br label %17

17:                                               ; preds = %16, %1
  ret void
}

declare dso_local %struct.sk_buff* @skb_dequeue(i32*) #1

declare dso_local i32 @netpoll_arp_reply(%struct.sk_buff*, %struct.netpoll_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
